[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wwtp-oc"
version = "0.1.0"
description = "Operating cost engine for WWTP simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
